--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/StartInteraction.loader.js";
+      var loaderUrl = buildUrl + "/CubeInteraction.loader.js";
       var config = {
-        dataUrl: buildUrl + "/StartInteraction.data.gz",
-        frameworkUrl: buildUrl + "/StartInteraction.framework.js.gz",
-        codeUrl: buildUrl + "/StartInteraction.wasm.gz",
+        dataUrl: buildUrl + "/CubeInteraction.data",
+        frameworkUrl: buildUrl + "/CubeInteraction.framework.js",
+        codeUrl: buildUrl + "/CubeInteraction.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Faze",
         productName: "cubeAnimation",
