cors issue test

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         "image_url": "https://prod-asset.faze.app/Packs/CosmicPackNoLabel.png"
                     },
                     "element5": {
-                        "federation_image_url": "https://prod-asset.faze.app/ICC%20Logo",
+                        "federation_image_url": "https://prod-asset.faze.app/logo/ICC_Logo.png",
                         "flag_image_url": "https://prod-asset.faze.app/Flags/India.png",
                         "copyright_info": "2021 Faze Technologies Inc.\nAll Rights Reserved.\nOfficially licensed product of International Cricket Council.",
                         "audio_enable": "TRUE",
