--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         "rarity": "PLATINUM",
                         "image_url": "https://prod-asset.faze.app/Monochrome%20Images/Dhoni.jpeg",
                         "video_url": "https://homepagecontent.s3.amazonaws.com/video/Dhoni%20Finishes%20off%20in%20style.mp4",
-                        "video_thumbnail": "http://prod-asset.faze.app/Video%20Thumbnail/MS%20Dhoni.jpg"
+                        "video_thumbnail": "https://prod-asset.faze.app/Video%20Thumbnail/MS%20Dhoni.jpg"
                     },
                     "element2": {
                         "action_type": "SIX",
