--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/CubeInteraction.loader.js";
+        var loaderUrl = buildUrl + "/StartInteraction.loader.js";
         var config = {
-            dataUrl: buildUrl + "/CubeInteraction.data",
-            frameworkUrl: buildUrl + "/CubeInteraction.framework.js",
-            codeUrl: buildUrl + "/CubeInteraction.wasm",
+            dataUrl: buildUrl + "/StartInteraction.data",
+            frameworkUrl: buildUrl + "/StartInteraction.framework.js",
+            codeUrl: buildUrl + "/StartInteraction.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Faze",
             productName: "cubeAnimation",
@@ -78,7 +78,7 @@
                         "player_name": "MS Dhoni",
                         "moment_length": "0:20",
                         "border_color": "#25AAF7",
-                        "rarity": "COMMON",
+                        "rarity": "LEGENDARY",
                         "image_url": "https://prod-asset.faze.app/Monochrome%20Images/Dhoni.jpeg",
                         "video_url": "https://homepagecontent.s3.amazonaws.com/video/Dhoni%20Finishes%20off%20in%20style.mp4",
                         "video_thumbnail": "https://prod-asset.faze.app/Video%20Thumbnail/MS%20Dhoni.jpg"
