--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         "player_name": "MS Dhoni",
                         "moment_length": "0:20",
                         "border_color": "#25AAF7",
-                        "rarity": "COMMON",
+                        "rarity": "GENESIS",
                         "image_url": "https://prod-asset.faze.app/Monochrome%20Images/Dhoni.jpeg",
                         "video_url": "https://homepagecontent.s3.amazonaws.com/video/Dhoni%20Finishes%20off%20in%20style.mp4",
                         "video_thumbnail": "https://prod-asset.faze.app/Video%20Thumbnail/MS%20Dhoni.jpg"
