--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/CubeInteraction.loader.js";
       var config = {
-        dataUrl: buildUrl + "/CubeInteraction.data.gz",
-        frameworkUrl: buildUrl + "/CubeInteraction.framework.js.gz",
-        codeUrl: buildUrl + "/CubeInteraction.wasm.gz",
+        dataUrl: buildUrl + "/CubeInteraction.data.unityweb",
+        frameworkUrl: buildUrl + "/CubeInteraction.framework.js.unityweb",
+        codeUrl: buildUrl + "/CubeInteraction.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Faze",
         productName: "cubeAnimation",
